# worldsim

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  test_format.cpp  vcpkg  vcpkg.json
apps/asset-cli/: CMakeLists.txt  Main.cpp
apps/asset-manager/: AssetDetailView.cpp  AssetDetailView.h  AssetGridView.cpp  AssetGridView.h  AssetRow.cpp  AssetRow.h  AssetThumbnail.cpp  AssetThumbnail.h  CMakeLists.txt  Main.cpp  SceneTypes.cpp  SceneTypes.h  Theme.h
apps/asset-manager/scenes/: BrowserScene.cpp
apps/ui-sandbox/: CMakeLists.txt  Main.cpp  NavigationMenu.cpp  NavigationMenu.h  SceneTypes.cpp  SceneTypes.h  main.cpp  navigation_menu.cpp  navigation_menu.h
apps/ui-sandbox/demos/: ArenaDemo.cpp  HandleDemo.cpp  LayoutDemo.cpp  ShapesDemo.cpp  arena_demo.cpp  buttons_demo.cpp  demo.h  handle_demo.cpp  shapes_demo.cpp
apps/ui-sandbox/scenes/: ArenaScene.cpp  ButtonScene.cpp  ClipScene.cpp  ContextMenuScene.cpp  DialogScene.cpp  DropdownScene.cpp  FontTestScene.cpp  GrassScene.cpp  HandleScene.cpp  IconScene.cpp  InputTestScene.cpp  LayerScene.cpp  LayoutScene.cpp  PlanetScene.cpp  SalvageDialogScene.cpp  SalvageModalScene.cpp  SalvageScene.cpp  ScrollScene.cpp  SdfMinimalScene.cpp  ShapesScene.cpp  SliderScene.cpp  SvgScene.cpp  TabBarScene.cpp  TextInputScene.cpp  TextShapesScene.cpp  TextWrapScene.cpp  ToastScene.cpp  TooltipScene.cpp  TreeScene.cpp  TreeViewScene.cpp  VectorPerfScene.cpp  VectorStarScene.cpp  arena_scene.cpp  button_scene.cpp  clip_scene.cpp  font_test_scene.cpp  handle_scene.cpp  input_test_scene.cpp  layer_scene.cpp  sdf_minimal_scene.cpp  (+5 more)
apps/world-sim/: CMakeLists.txt  GameStartConfig.cpp  GameStartConfig.h  GameWorldState.cpp  GameWorldState.h  Main.cpp  SceneTypes.cpp  SceneTypes.h  UserSettings.h  main.cpp
apps/world-sim/components/: BuildMenu.cpp  BuildMenu.h  BuildToolbar.cpp  BuildToolbar.h  ColonistListPanel.cpp  ColonistListPanel.h  CraftingAdapter.cpp  CraftingAdapter.h  EntityInfoPanel.cpp  EntityInfoPanel.h  GameOverlay.cpp  GameOverlay.h  GameUI.cpp  GameUI.h  GhostRenderer.h  InfoSlot.h  NeedBar.cpp  NeedBar.h  NotificationManager.h  PlacementMode.cpp  PlacementMode.h  Selection.h  SelectionAdapter.cpp  SelectionAdapter.h  TaskListPanel.cpp  TaskListPanel.h  ZoomControl.cpp  ZoomControl.h
apps/world-sim/scenes/: GameLoadingScene.cpp  GameScene.cpp  MainMenuScene.cpp  SettingsScene.cpp  SplashScene.cpp  WorldCreatorScene.cpp  splash_scene.cpp
libs/engine/: CMakeLists.txt
libs/engine/application/: AppConfig.h  AppLauncher.cpp  AppLauncher.h  Application.cpp  Application.h  application.cpp  application.h  placeholder.cpp
libs/engine/assets/: ActionTypeDef.h  ActionTypeRegistry.cpp  ActionTypeRegistry.h  AssetBatcher.cpp  AssetBatcher.h  AssetDefinition.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistryAsync.test.cpp  AssetRenderer.cpp  AssetRenderer.h  AssetRenderer.test.cpp  AssetSpawner.cpp  AssetSpawner.h  AssetValidator.cpp  AssetValidator.h  AssetValidator.test.cpp  CMakeLists.txt  CollisionShape.test.cpp  ConfigValidator.cpp  ConfigValidator.h  ConstructionRegistry.cpp  ConstructionRegistry.h  ConstructionRegistry.test.cpp  IAssetGenerator.h  ItemProperties.h  MotionDef.h  MotionEval.cpp  MotionEval.h  PriorityConfig.cpp  PriorityConfig.h  RecipeDef.h  RecipeRegistry.cpp  RecipeRegistry.h  SvgPathNodes.cpp  SvgPathNodes.h  TaskChainDef.h  TaskChainRegistry.cpp  TaskChainRegistry.h  WorkConfig.test.cpp  (+3 more)
libs/engine/clipboard/: ClipboardManager.cpp  ClipboardManager.h  clipboard_manager.cpp  clipboard_manager.h
libs/engine/construction/: ConstructionValidator.cpp  ConstructionValidator.h  ConstructionValidator.test.cpp  ConstructionWorld.cpp  ConstructionWorld.h  ConstructionWorld.test.cpp  OpeningGeometry.cpp  OpeningGeometry.h  RoomDetection.cpp  RoomDetection.h  RoomDetection.test.cpp  RoomHitTest.cpp  RoomHitTest.h  RoomHitTest.test.cpp  SnapEngine.cpp  SnapEngine.h  SnapEngine.test.cpp
libs/engine/ecs/: ComponentPool.h  ECS.h  EntityID.h  GlobalTaskRegistry.cpp  GlobalTaskRegistry.h  GlobalTaskRegistry.test.cpp  GoalTaskRegistry.cpp  GoalTaskRegistry.h  ISystem.h  InventoryMass.h  InventoryMass.test.cpp  Registry.h  View.h  World.h
libs/engine/input/: InputManager.cpp  InputManager.h  InputManager.test.cpp  InputTypes.h  input_manager.cpp  input_manager.h
libs/engine/nav/: NavCoords.h  NavInputBuilder.cpp  NavInputBuilder.h  NavInputBuilder.test.cpp
libs/engine/scene/: Overlay.h  Scene.h  SceneManager.cpp  SceneManager.h  scene.h  scene_manager.cpp  scene_manager.h
libs/engine/vision/: GeometryIndex.cpp  GeometryIndex.h  GeometryIndex.test.cpp
libs/engine/world/: Biome.h  BiomeWeights.h  BiomeWeights.test.cpp  Tile.h  TileGrid.cpp  TileGrid.h
libs/foundation/: CMakeLists.txt
libs/foundation/debug/: DebugServer.cpp  DebugServer.h  DebugServer.test.cpp  LockFreeRingBuffer.h  debug_server.cpp  debug_server.h  lock_free_ring_buffer.h
libs/foundation/graphics/: ClipTypes.h  Color.h  PngEncoder.cpp  PngEncoder.h  PrimitiveStyles.h  Rect.h  clip_types.h  color.h  primitive_styles.h  rect.h
libs/foundation/math/: DeterministicMath.h  DeterministicMath.test.cpp  Types.h  placeholder.cpp  types.h
libs/foundation/memory/: Arena.bench.cpp  Arena.h  Arena.test.cpp  arena.bench.cpp  arena.h  arena.test.cpp
libs/foundation/metrics/: PerformanceMetrics.cpp  (+5 more)
libs/game-systems/: CMakeLists.txt
libs/geometry/: CMakeLists.txt
libs/planet-view/: CMakeLists.txt  OrbitCamera.cpp  OrbitCamera.h  PlanetColorizer.cpp  PlanetColorizer.h  PlanetColorizer.test.cpp  PlanetDetailCache.cpp  PlanetDetailCache.h  PlanetDetailCache.test.cpp  PlanetLru.h  PlanetMesh.cpp  PlanetMesh.h  PlanetMeshMath.h  PlanetMeshMath.test.cpp  PlanetPageMath.h  PlanetPicker.h  PlanetPicker.test.cpp  PlanetRenderer.cpp  PlanetRenderer.h  PlanetScheduler.cpp  PlanetScheduler.h  PlanetTileColor.cpp  PlanetTileColor.h
libs/renderer/: CMakeLists.txt
libs/ui/: CMakeLists.txt  stb_image.cpp
libs/world/: CMakeLists.txt
tools/generate_sdf_atlas/: CMakeLists.txt  main.cpp
(+1209 files in other folders)
